--- a/res/layout/time_picker_holo.xml
+++ b/res/layout/time_picker_holo.xml
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            style="@style/txt_style"
+            style="@style/number_txt_style"
             /><!-- android:importantForAccessibility="no" -->
 
         <!-- minute -->
