--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -45,6 +45,7 @@
         <item name="solidColor">@android:color/transparent</item>
         <item name="selectionDivider">@drawable/np_numberpicker_selection_divider</item>
         <item name="selectionDividerHeight">2dip</item>
+        <item name="selectionDividersDistance">56dip</item>
         <item name="internalLayout">@layout/number_picker_with_selector_wheel</item>
         <item name="internalMinWidth">45dip</item>
         <item name="internalMaxHeight">150dip</item>
